--- a/src/main/resources/templates/fragments/lesson-card.html
+++ b/src/main/resources/templates/fragments/lesson-card.html
@@ -1,12 +1,12 @@
 <div th:fragment="lessonCard(lesson)">
-    <div class="lesson">
+    <div class="lesson" th:classappend="${lesson.lessonType.name()  == 'LECTURE'} ? ' lecture-block' : ' exercise-block'">
 
             <div class="lesson-content">
                 <div class="lesson-header">
                     <strong th:text="|${#temporals.format(lesson.startTime, 'HH:mm')}-${#temporals.format(lesson.endTime, 'HH:mm')}|">
                         10:00–11:30
                     </strong>
-                    <span class="badge" th:classappend="${lesson.lessonType.name()  == 'LECTURE'} ? ' lecture' : ' exercise'" th:text="${lesson.lessonType}">LECTURE</span>
+                    <span class="badge" th:text="${lesson.lessonType}">LECTURE</span>
                 </div>
 
                 <div class="lesson-info">
