--- a/src/main/resources/templates/fragments/lesson-card.html
+++ b/src/main/resources/templates/fragments/lesson-card.html
@@ -1,7 +1,7 @@
 <div th:fragment="lessonCard(lesson)">
     <div class="lesson" th:classappend="${lesson.lessonType.name()  == 'LECTURE'} ? ' lecture-block' : ' exercise-block'">
 
-            <div class="lesson-content">
+<!--            <div class="lesson-content">-->
                 <div class="lesson-header">
                     <strong th:text="|${#temporals.format(lesson.startTime, 'HH:mm')}-${#temporals.format(lesson.endTime, 'HH:mm')}|">
                         10:00–11:30
@@ -13,13 +13,17 @@
                     <span th:text="${lesson.subjectName}">subject</span><br/>
                     <span th:text="${lesson.teacherName}">teacher</span><br>
                     <span th:text="'Classroom: ' + ${lesson.roomNumber}">Classroom: 123_c</span><br/>
-                    <span th:text="'students: ' + ${lesson.groupCapacity}">students: 20</span>
+                    <span th:text="'students: ' + ${lesson.groupCapacity} + '/' + ${lesson.roomCapacity} ">students: 20</span>
                 </div>
 
                 <div class="lesson-icons">
                     <span class="edit-icon" onclick="toggleForm()">✏️</span>
                     <span class="delete-icon">🗑️</span>
                 </div>
-            </div>
+
+
+
+
     </div>
+
 </div>
